--- a/dash-royale.html
+++ b/dash-royale.html
@@ -4,72 +4,44 @@
 <meta charset="UTF-8">
 <title>Dash Royale</title>
 <style>
-body{
-  margin:0;
-  font-family:Arial;
-  background:#0f1220;
-  color:#fff;
-  text-align:center;
-}
-h1{margin:8px}
-
+body{margin:0;font-family:Arial;background:#0f1220;color:#fff;text-align:center}
 #arena{
-  width:360px;
-  height:520px;
+  width:360px;height:520px;margin:10px auto;
   background:linear-gradient(#2a2f5a,#1b1f3b);
-  margin:10px auto;
-  position:relative;
-  border-radius:14px;
-  overflow:hidden;
-  border:3px solid #444;
+  border-radius:14px;position:relative;overflow:hidden;border:3px solid #444
 }
-
-.lane{
-  position:absolute;
-  width:100%;
-  height:33.33%;
-  border-top:1px solid #333;
-}
-
+.lane{position:absolute;width:100%;height:33.33%}
 .tower{
-  position:absolute;
-  width:60px;
-  height:60px;
-  border-radius:10px;
-  line-height:14px;
-  font-size:12px;
-  padding-top:8px;
-  font-weight:bold;
+  position:absolute;width:60px;height:60px;border-radius:10px;
+  font-size:12px;font-weight:bold;padding-top:8px
 }
 .enemyTower{top:8px;background:#e74c3c}
 .playerTower{bottom:8px;background:#3498db}
-
 .unit{
-  position:absolute;
-  width:28px;
-  height:28px;
-  border-radius:50%;
-  background:#2ecc71;
+  position:absolute;width:28px;height:28px;border-radius:50%
 }
+.soldier{background:#2ecc71}
+.tank{background:#9b59b6}
+.fast{background:#1abc9c}
 .enemy{background:#f1c40f}
-
-#ui{
-  max-width:360px;
-  margin:auto;
-  display:flex;
-  justify-content:space-between;
-  padding:8px;
+.bullet{
+  position:absolute;width:6px;height:6px;
+  background:#fff;border-radius:50%
 }
+#cards{
+  max-width:360px;margin:auto;
+  display:flex;justify-content:space-around
+}
+.card{
+  background:#1b1f3b;padding:10px;border-radius:10px;
+  cursor:pointer;width:90px
+}
+.card:hover{outline:2px solid #2575fc}
+#msg{font-size:22px;margin:10px}
 button,a{
-  padding:10px 14px;
-  background:#2575fc;
-  border:none;
-  border-radius:8px;
-  color:#fff;
-  text-decoration:none;
-  cursor:pointer;
+  padding:10px 14px;background:#2575fc;border:none;
+  border-radius:8px;color:#fff;text-decoration:none;cursor:pointer
 }
-#msg{font-size:20px;margin:10px}
 </style>
 </head>
 <body>
@@ -78,132 +50,121 @@ button,a{
 <div>Elixir: <b><span id="elixir">5</span></b></div>
 
 <div id="arena">
-  <div class="lane" style="top:0%" onclick="deploy(0)"></div>
-  <div class="lane" style="top:33.33%" onclick="deploy(1)"></div>
-  <div class="lane" style="top:66.66%" onclick="deploy(2)"></div>
+  <div class="lane" style="top:0%" onclick="place(0)"></div>
+  <div class="lane" style="top:33.33%" onclick="place(1)"></div>
+  <div class="lane" style="top:66.66%" onclick="place(2)"></div>
 
-  <div class="tower enemyTower" style="left:20px">
-    EN<br>HP <span id="e1">200</span>
-  </div>
-  <div class="tower enemyTower" style="right:20px">
-    EN<br>HP <span id="e2">200</span>
-  </div>
-
-  <div class="tower playerTower" style="left:20px">
-    YOU<br>HP <span id="p1">200</span>
-  </div>
-  <div class="tower playerTower" style="right:20px">
-    YOU<br>HP <span id="p2">200</span>
-  </div>
+  <div class="tower enemyTower" style="left:20px">EN<br>HP <span id="e1">300</span></div>
+  <div class="tower enemyTower" style="right:20px">EN<br>HP <span id="e2">300</span></div>
+  <div class="tower playerTower" style="left:20px">YOU<br>HP <span id="p1">300</span></div>
+  <div class="tower playerTower" style="right:20px">YOU<br>HP <span id="p2">300</span></div>
 </div>
 
-<div id="ui">
-  <button onclick="reset()">Restart</button>
-  <a href="index.html">Menu</a>
+<div id="cards">
+  <div class="card" onclick="select('soldier')">🗡 Soldier<br>3⚡</div>
+  <div class="card" onclick="select('fast')">⚡ Dash<br>2⚡</div>
+  <div class="card" onclick="select('tank')">🛡 Tank<br>5⚡</div>
 </div>
+
+<br>
+<button onclick="reset()">Restart</button>
+<a href="index.html">Menu</a>
 
 <div id="msg"></div>
 
 <script>
 let arena=document.getElementById("arena");
-let elixir=5;
-let units=[];
-let gameOver=false;
+let elixir=5,selected="soldier",gameOver=false;
+let units=[],bullets=[];
+let towers={p:[300,300],e:[300,300]};
 
-let towers={
-  p:[200,200],
-  e:[200,200]
+const costs={soldier:3,fast:2,tank:5};
+const stats={
+  soldier:{hp:40,speed:1.2,damage:20},
+  fast:{hp:25,speed:2,damage:15},
+  tank:{hp:90,speed:0.7,damage:30}
 };
 
+setInterval(()=>{if(elixir<10&&!gameOver){elixir++;elixirEl.textContent=elixir}},2000);
 const elixirEl=document.getElementById("elixir");
 
-setInterval(()=>{
-  if(elixir<10 && !gameOver){
-    elixir++;
-    elixirEl.textContent=elixir;
-  }
-},2000);
+function select(t){selected=t}
 
-function deploy(lane){
-  if(elixir<3 || gameOver) return;
-  elixir-=3;
-  elixirEl.textContent=elixir;
-
-  spawnUnit(false,lane);
+function place(lane){
+  if(gameOver||elixir<costs[selected])return;
+  elixir-=costs[selected];elixirEl.textContent=elixir;
+  spawn(false,lane,selected)
 }
 
-function spawnUnit(enemy,lane){
+function spawn(enemy,lane,type){
   let u=document.createElement("div");
-  u.className="unit"+(enemy?" enemy":"");
+  u.className="unit "+(enemy?"enemy":"")+(!enemy?(" "+type):"");
   u.style.left="166px";
   let y=enemy?80:420;
   u.style.top=y+"px";
   arena.appendChild(u);
-
-  units.push({el:u,y,enemy,lane,hp:30});
+  units.push({el:u,y,enemy,lane,type,hp:stats[type]?.hp||40})
 }
 
-setInterval(()=>{
-  if(!gameOver){
-    spawnUnit(true,Math.floor(Math.random()*3));
-  }
-},3000);
+setInterval(()=>{if(!gameOver)spawn(true,Math.floor(Math.random()*3),"soldier")},3000);
+
+function shoot(fromEnemy){
+  let b=document.createElement("div");
+  b.className="bullet";
+  b.style.left="180px";
+  b.style.top=fromEnemy?"80px":"440px";
+  arena.appendChild(b);
+  bullets.push({el:b,y:fromEnemy?80:440,enemy:fromEnemy});
+}
+setInterval(()=>{if(!gameOver){shoot(false);shoot(true)}},1200);
 
 function updateTowers(){
-  document.getElementById("p1").textContent=towers.p[0];
-  document.getElementById("p2").textContent=towers.p[1];
-  document.getElementById("e1").textContent=towers.e[0];
-  document.getElementById("e2").textContent=towers.e[1];
+  ["p1","p2","e1","e2"].forEach((id,i)=>{
+    document.getElementById(id).textContent=i<2?towers.p[i]:towers.e[i-2]
+  })
 }
 
-function checkWin(){
-  if(towers.e[0]<=0 && towers.e[1]<=0){
-    endGame("🏆 YOU WIN!");
-  }
-  if(towers.p[0]<=0 && towers.p[1]<=0){
-    endGame("💀 YOU LOSE");
-  }
-}
-
-function endGame(text){
-  gameOver=true;
-  document.getElementById("msg").textContent=text;
-}
+function end(text){gameOver=true;document.getElementById("msg").textContent=text}
 
 function loop(){
   units.forEach((u,i)=>{
-    u.y += u.enemy ? 1.2 : -1.2;
+    let s=stats[u.type]||stats.soldier;
+    u.y+=u.enemy?s.speed:-s.speed;
     u.el.style.top=u.y+"px";
 
-    if(!u.enemy && u.y<90){
-      towers.e[Math.random()>0.5?0:1]-=20;
-      arena.removeChild(u.el);
-      units.splice(i,1);
-      updateTowers();
-      checkWin();
+    if(!u.enemy&&u.y<90){
+      towers.e[Math.random()>0.5?0:1]-=s.damage;
+      arena.removeChild(u.el);units.splice(i,1);
     }
-
-    if(u.enemy && u.y>430){
-      towers.p[Math.random()>0.5?0:1]-=20;
-      arena.removeChild(u.el);
-      units.splice(i,1);
-      updateTowers();
-      checkWin();
+    if(u.enemy&&u.y>430){
+      towers.p[Math.random()>0.5?0:1]-=s.damage;
+      arena.removeChild(u.el);units.splice(i,1);
     }
   });
+
+  bullets.forEach((b,i)=>{
+    b.y+=b.enemy?2:-2;
+    b.el.style.top=b.y+"px";
+    if(b.y<60||b.y>460){
+      arena.removeChild(b.el);bullets.splice(i,1);
+    }
+  });
+
+  if(towers.e[0]<=0&&towers.e[1]<=0)end("🏆 YOU WIN!");
+  if(towers.p[0]<=0&&towers.p[1]<=0)end("💀 YOU LOSE");
+
+  updateTowers();
   requestAnimationFrame(loop);
 }
 loop();
 
 function reset(){
   units.forEach(u=>arena.removeChild(u.el));
-  units=[];
-  elixir=5;
-  towers={p:[200,200],e:[200,200]};
-  gameOver=false;
-  document.getElementById("msg").textContent="";
-  updateTowers();
-  elixirEl.textContent=elixir;
+  bullets.forEach(b=>arena.removeChild(b.el));
+  units=[];bullets=[];
+  towers={p:[300,300],e:[300,300]};
+  elixir=5;elixirEl.textContent=elixir;
+  gameOver=false;document.getElementById("msg").textContent="";
 }
 </script>
 
