--- a/index.html
+++ b/index.html
@@ -1,77 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GameZone</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #0f1220;
-      color: #fff;
-    }
-    header {
-      padding: 20px;
-      text-align: center;
-      background: linear-gradient(135deg, #6a11cb, #2575fc);
-    }
-    .container {
-      max-width: 1000px;
-      margin: auto;
-      padding: 30px;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-    }
-    .card {
-      background: #1b1f3b;
-      padding: 25px;
-      border-radius: 14px;
-      text-align: center;
-      box-shadow: 0 10px 25px rgba(0,0,0,.3);
-    }
-    a {
-      display: inline-block;
-      margin-top: 15px;
-      padding: 10px 18px;
-      background: #2575fc;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 8px;
-    }
-    a:hover { opacity: .85; }
-    footer {
-      text-align: center;
-      padding: 15px;
-      color: #aaa;
-      background: #0b0e1a;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>GameZone</title>
+<style>
+body{
+  margin:0;
+  font-family:Arial, Helvetica, sans-serif;
+  background:#0f1220;
+  color:#fff;
+}
+header{
+  padding:25px;
+  text-align:center;
+  background:linear-gradient(135deg,#6a11cb,#2575fc);
+}
+.container{
+  max-width:1100px;
+  margin:auto;
+  padding:30px;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:25px;
+}
+.card{
+  background:#1b1f3b;
+  padding:25px;
+  border-radius:16px;
+  text-align:center;
+  box-shadow:0 10px 30px rgba(0,0,0,.35);
+}
+.card h2{margin-top:0}
+.card p{color:#bbb}
+a{
+  display:inline-block;
+  margin-top:15px;
+  padding:12px 20px;
+  background:#2575fc;
+  color:#fff;
+  text-decoration:none;
+  border-radius:10px;
+  font-weight:bold;
+}
+a:hover{opacity:.85}
+footer{
+  text-align:center;
+  padding:15px;
+  background:#0b0e1a;
+  color:#aaa;
+}
+</style>
 </head>
 <body>
 
 <header>
   <h1>🎮 GameZone</h1>
-  <p>Select a game</p>
+  <p>Select a game and start playing</p>
 </header>
 
 <div class="container">
+
   <div class="card">
-    <h2>Tic Tac Toe</h2>
-    <p>Classic X vs O</p>
+    <h2>❌⭕ Tic Tac Toe</h2>
+    <p>Classic X vs O battle</p>
     <a href="tic-tac-toe.html">Play</a>
   </div>
 
   <div class="card">
-    <h2>Clicker Game</h2>
-    <p>Click as fast as you can</p>
+    <h2>🖱 Clicker Game</h2>
+    <p>Click fast and beat your score</p>
     <a href="clicker.html">Play</a>
   </div>
+
+  <div class="card">
+    <h2>⚔️ Dash Royale</h2>
+    <p>Strategy lane battle inspired by Clash-style games</p>
+    <a href="dash-royale.html">Play</a>
+  </div>
+
 </div>
 
 <footer>
-  © 2025 GameZone
+  © 2025 GameZone | Built with HTML, CSS & JavaScript
 </footer>
 
 </body>
